<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="?dialogPreferredPadding">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorTextPrimary"
        android:textSize="@dimen/_16sp"
        android:text="@string/name_"/>
    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorTextPrimary"
        android:textSize="@dimen/_16sp"
        android:text="@string/description"/>
    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/show_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorTextPrimary"
        android:textSize="@dimen/_16sp"
        android:text="@string/date_time"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/time_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_weight="0.5"
            android:drawableStart="@drawable/add_1"
            android:text="@string/change_time"
            app:cornerRadius="@dimen/corner_radius" />

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorTextPrimary"
                android:text="@string/choosen_time"
                android:textSize="@dimen/_16sp" />

            <TextView
                android:id="@+id/time_and_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_16sp"
                android:gravity="center"
                android:textColor="@color/colorPrimaryVariant"
                android:text="@string/not_pick" />
        </LinearLayout>
    </LinearLayout>

    <RadioGroup
        android:id="@+id/group_importance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:textSize="@dimen/_16dp"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:textColor="@color/colorTextPrimary"
            android:text="@string/choise_importance"
            tools:ignore="SpUsage" />

        <RadioButton
            android:id="@+id/Importance_0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextPrimary"
            android:text="@string/menu_importance_0" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryVariant"
            android:text="@string/menu_importance_0_text"
            android:paddingBottom="@dimen/_10dp"
            android:paddingStart="@dimen/_30dp"/>

        <RadioButton
            android:id="@+id/Importance_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextPrimary"
            android:text="@string/menu_importance_1"
            />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryVariant"
            android:text="@string/menu_importance_1_text"
            android:paddingBottom="@dimen/_10dp"
            android:paddingStart="@dimen/_30dp"/>

        <RadioButton
            android:id="@+id/Importance_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextPrimary"
            android:text="@string/menu_importance_2" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryVariant"
            android:text="@string/menu_importance_2_text"
            android:paddingBottom="@dimen/_10dp"
            android:paddingStart="@dimen/_30dp"/>
    </RadioGroup>

</LinearLayout>