<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/_8dp"
    android:background="@drawable/background_for_0"
    android:id="@+id/layout"
    >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/name_rv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextPrimary"
            android:text="@string/notificationName"
            android:textSize="@dimen/_16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/description_rv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryVariant"
            android:text="@string/notidicationDescription"
            android:textSize="@dimen/_14sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/_40dp"
        android:layout_height="@dimen/_40dp"
        android:layout_gravity="end"
        android:rotationX="0"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/time_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timeNotification"
            android:textColor="@color/colorTextPrimary"
            android:gravity="center"
            android:textSize="@dimen/_16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/date_rv"
            android:gravity="center"
            android:textColor="@color/colorTextPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dateNotification"
            android:textSize="@dimen/_14sp" />


    </LinearLayout>

</LinearLayout>